# mknix

./: .gitignore  CMakeLists.txt  README.md  index.html  index.md  params.json
LMX-1.0/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.in  libtool
LMX-1.0/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
LMX-1.0/src/: Makefile  Makefile.am  Makefile.in
LMX-1.0/src/LMX/: Makefile  Makefile.am  Makefile.in  cofe_CofeUtils.h  cofe_TensorRank1.h  cofe_TensorRank2.h  cofe_TensorRank2Sym.h  cofe_fmc.h  cofe_gausselim.h  cofe_jpjacobi.h  lmx.h  lmx_base_iohb.h  lmx_base_selector.h  lmx_base_stopwatch.h  lmx_diff_configuration.h  lmx_diff_integrator_ab.h  lmx_diff_integrator_am.h  lmx_diff_integrator_base.h  lmx_diff_integrator_base_implicit.h  lmx_diff_integrator_bdf.h  lmx_diff_integrator_centraldiff.h  lmx_diff_integrator_newmark.h  lmx_diff_problem.h  lmx_diff_problem_double.h  lmx_diff_problem_first.h  lmx_diff_problem_first.h~  lmx_diff_problem_first_second.h  lmx_diff_problem_second.h  lmx_except.h  lmx_linsolvers.h  lmx_linsolvers_cg.h  lmx_linsolvers_lapack.h  lmx_linsolvers_lu.h  lmx_linsolvers_superlu_interface.h  lmx_linsolvers_system.h  lmx_mat_data.h  lmx_mat_data_blas.h  lmx_mat_data_mat.h  lmx_mat_data_vec.h  lmx_mat_dense_matrix.h  (+13 more)
LMX-1.0/src/LMX-old/: lmx.h  lmx_base_selector.h  lmx_diff_configuration.h  lmx_diff_integrator_base_implicit.h  lmx_diff_integrator_bdf.h  lmx_diff_integrator_centraldiff.h  lmx_diff_problem.h  lmx_diff_problem_double.h  lmx_diff_problem_first_second.h  lmx_diff_problem_second.h  lmx_linsolvers.h  lmx_linsolvers_cg.h  lmx_linsolvers_lu.h  lmx_linsolvers_system.h  lmx_mat_data.h  lmx_mat_data_blas.h  lmx_mat_data_mat.h  lmx_mat_dense_matrix.h  lmx_mat_type_gmmvector_sparse1.h  lmx_mat_vector.h  lmx_nlsolvers.h
LMX-1.0/src/LMX/.svn/: all-wcprops  entries
LMX-1.0/src/LMX/.svn/text-base/: Makefile.am.svn-base  Makefile.in.svn-base  cofe_CofeUtils.h.svn-base  cofe_TensorRank1.h.svn-base  cofe_TensorRank2.h.svn-base  cofe_TensorRank2Sym.h.svn-base  cofe_fmc.h.svn-base  cofe_gausselim.h.svn-base  cofe_jpjacobi.h.svn-base  lmx.h.svn-base  lmx_base_iohb.h.svn-base  lmx_base_selector.h.svn-base  lmx_base_stopwatch.h.svn-base  lmx_diff_configuration.h.svn-base  lmx_diff_integrator_ab.h.svn-base  lmx_diff_integrator_am.h.svn-base  lmx_diff_integrator_base.h.svn-base  lmx_diff_integrator_base_implicit.h.svn-base  lmx_diff_integrator_bdf.h.old.svn-base  lmx_diff_integrator_bdf.h.svn-base  lmx_diff_integrator_centraldiff.h.svn-base  lmx_diff_integrator_newmark.h.svn-base  lmx_diff_problem.h.old.svn-base  lmx_diff_problem.h.svn-base  (+32 more)
LMX-1.0/tests/: Makefile  Makefile.am  Makefile.in  SLU_test001  SLU_test001.cpp  test001  test001.cpp  test002  test002.cpp  test002.lastout  test003  test003.cpp  test003.verified  test004  test004.cpp  test004.lastout  test005  test005.cpp  test005.lastout  test006  test006.cpp  test006.lastout  test007  test007.cpp  test008  test008.cpp  test009  test009.cpp  test010  test010.cpp  test010.verified  test011  test011.cpp  test011.lastout  test011.verified  test012  test012.cpp  test012.lastout  test012.verified  test013  (+12 more)
LMX-1.0/tests/gmm/: Makefile  Makefile.am  Makefile.in  test001.cpp  test001.mat
LMX-1.0/tests/lapack/: Makefile  Makefile.am  Makefile.in  test001.cpp
src/: CMakeLists.txt  CMakeLists.txt~  common.cpp  common.h  mknix.cpp
src/core/: CMakeLists.txt  cell.cpp  cell.h  cellboundary.cpp  cellboundary.h  cellboundarylinear.cpp  cellboundarylinear.h  cellrect.cpp  cellrect.h  celltetrahedron.cpp  celltetrahedron.h  celltriang.cpp  celltriang.h  compbar.cpp  compbar.h  dictionary.h  elemtetrahedron.cpp  elemtetrahedron.h  elemtriangle.cpp  elemtriangle.h  gausspoint.cpp  gausspoint.h  gausspoint2D.cpp  gausspoint2D.h  gausspoint3D.cpp  gausspoint3D.h  gausspointboundary.cpp  gausspointboundary.h  material.cpp  material.h  node.cpp  node.h  point.cpp  point.h  shapefunction.cpp  shapefunction.h  shapefunctionMLS.cpp  shapefunctionMLS.h  shapefunctionMLS2D.cpp  shapefunctionMLS2D.h  (+14 more)
src/cpu/: CMakeLists.txt  assembly_cpu.cpp  chTimer.h  cpu_run_type.h  functions_cpu.cpp  functions_cpu.h  structures.h
src/gpu/: CMakeLists.txt  assembly_cpu.cpp  assembly_cpu.h  assembly_kernels.cu  assembly_kernels.h  assembly_kernels.hpp  calc_cpu.cpp  calc_cpu.h  chTimer.cpp  chTimer.h  cpu_run_type.h  cpu_solvers.h  cuda_helper.cu  cuda_helper.h  device_helper.cuh  device_helper.h  functions_cpu.cpp  functions_cpu.h  structures_gpu.cu  structures_gpu.h  test.cpp
src/reader/: CMakeLists.txt  reader.cpp  reader.h  readerconstraints.cpp  readerconstraints.h  readerflex.cpp  readerflex.h  readerrigid.cpp  readerrigid.h  sectionreader.cpp  sectionreader.h
src/simulation/: CMakeLists.txt  analysis.cpp  analysis.h  analysisdynamic.cpp  analysisdynamic.h  analysisstatic.cpp  analysisstatic.h  analysisthermaldynamic.cpp  analysisthermaldynamic.h  analysisthermalstatic.cpp  analysisthermalstatic.h  analysisthermomechanicaldynamic.cpp  analysisthermomechanicaldynamic.h  simulation.cpp  simulation.h
src/system/: CMakeLists.txt  body.cpp  body.h  bodyflex.cpp  bodyflex.h  bodyflexframegalerkin.cpp  bodyflexframegalerkin.h  bodyflexglobalgalerkin.cpp  bodyflexglobalgalerkin.h  bodyrigid.cpp  bodyrigid.h  bodyrigid0D.cpp  bodyrigid0D.h  bodyrigid1D.cpp  bodyrigid1D.h  bodyrigid2D.cpp  bodyrigid2D.h  bodyrigid3D.cpp  bodyrigid3D.h  bodythermal.cpp  bodythermal.h  boundarygroup.cpp  boundarygroup.h  cellboundary.cpp  cellboundarylinear.cpp  constraint.cpp  constraint.h  constraintclearance.cpp  constraintclearance.h  constraintcontact.cpp  constraintcontact.h  constraintdistance.cpp  constraintdistance.h  constraintfixedaxis.cpp  constraintfixedaxis.h  constraintfixedcoordinates.cpp  constraintfixedcoordinates.h  constraintthermal.cpp  constraintthermal.h  constraintthermalfixed.cpp  (+23 more)
tests/: 2triangfem.mec  CMakeLists.txt  CMakeLists.txt~  input_2triangles.fem.mknix  mknix.cpp  mknix_test.cmake  output.reader  runtest.cmake
(+3785 files in other folders)
