
# set the include path found by configure
#INCLUDES = -I$(top_srcdir)/src -I/home/daniel/Programs/gmm/gmm-1.7/include/


# the library search path.





pkginclude_HEADERS = cofe_CofeUtils.h cofe_TensorRank1.h cofe_TensorRank2.h \
	cofe_TensorRank2Sym.h cofe_fmc.h cofe_gausselim.h cofe_jpjacobi.h lmx.h lmx_base_iohb.h \
	lmx_base_selector.h lmx_base_stopwatch.h lmx_diff_configuration.h lmx_diff_integrator_ab.h \
	lmx_diff_integrator_am.h lmx_diff_integrator_base.h lmx_diff_integrator_base_implicit.h \
	lmx_diff_integrator_bdf.h lmx_diff_integrator_centraldiff.h lmx_diff_integrator_newmark.h \
	lmx_diff_problem.h lmx_diff_problem_first.h lmx_diff_problem_second.h lmx_except.h \
	lmx_linsolvers.h lmx_linsolvers_cg.h lmx_linsolvers_lu.h lmx_linsolvers_lapack.h \
	lmx_linsolvers_superlu_interface.h lmx_linsolvers_system.h lmx_mat_data.h lmx_mat_data_blas.h \
	lmx_mat_data_mat.h lmx_mat_data_vec.h lmx_mat_dense_matrix.h lmx_mat_elem_ref.h \
	lmx_mat_matrix.h lmx_mat_type_csc.h lmx_mat_type_gmm.h lmx_mat_type_gmm_sparse1.h \
	lmx_mat_type_gmmvector_sparse1.h lmx_mat_type_stdmatrix.h lmx_mat_type_stdvector.h lmx_mat_vector.h \
	lmx_nlsolvers.h



